--- a/.github/workflows/cd-pipeline.yaml
+++ b/.github/workflows/cd-pipeline.yaml
@@ -20,7 +20,7 @@ jobs:
             cd ~/cicd-binar
             cd apps
             docker-compose down
-            git pull origin master
+            git pull origin main
             git status
             docker-compose up -d
             # NODE_ENV=prod pm2 restart glints-backend --update-env // contoh pakai pm2
